test/spec/memory.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/memory.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/memory.wast:19:36: only one memory block allowed
(assert_invalid (module (memory 0) (memory 0)) "multiple memories")
                                   ^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:20:65: only one memory block allowed
...dule (memory (import "spectest" "memory") 0) (memory 0)) "multiple memories")
                                                ^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:29:26: memory variable out of range (max 0)
(assert_invalid (module (data (i32.const 0))) "unknown memory")
                         ^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:30:26: memory variable out of range (max 0)
(assert_invalid (module (data (i32.const 0) "")) "unknown memory")
                         ^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:31:26: memory variable out of range (max 0)
(assert_invalid (module (data (i32.const 0) "x")) "unknown memory")
                         ^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:34:24: f32.load requires an imported or defined memory.
  (module (func (drop (f32.load (i32.const 0)))))
                       ^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:38:18: f32.store requires an imported or defined memory.
  (module (func (f32.store (f32.const 0) (i32.const 0))))
                 ^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:38:18: type mismatch at f32.store. got f32, expected i32
  (module (func (f32.store (f32.const 0) (i32.const 0))))
                 ^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:38:18: type mismatch at f32.store. got i32, expected f32
  (module (func (f32.store (f32.const 0) (i32.const 0))))
                 ^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:42:24: i32.load8_s requires an imported or defined memory.
  (module (func (drop (i32.load8_s (i32.const 0)))))
                       ^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:46:18: i32.store8 requires an imported or defined memory.
  (module (func (i32.store8 (i32.const 0) (i32.const 0))))
                 ^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:50:24: current_memory requires an imported or defined memory.
  (module (func (drop (current_memory))))
                       ^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:54:24: grow_memory requires an imported or defined memory.
  (module (func (drop (grow_memory (i32.const 0)))))
                       ^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:59:29: type mismatch at data segment offset. got i64, expected i32
  (module (memory 1) (data (i64.const 0)))
                            ^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:63:22: invalid data segment offset, must be a constant expression; either *.const or get_global.
  (module (memory 1) (data (i32.ctz (i32.const 0))))
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:67:22: invalid data segment offset, must be a constant expression; either *.const or get_global.
  (module (memory 1) (data (nop)))
                     ^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:104:11: max pages (0) must be >= initial pages (1)
  (module (memory 1 0))
          ^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:108:11: initial pages (65537) must be <= (65536)
  (module (memory 65537))
          ^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:112:11: initial pages (2147483648) must be <= (65536)
  (module (memory 2147483648))
          ^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:116:11: initial pages (4294967295) must be <= (65536)
  (module (memory 4294967295))
          ^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:120:11: max pages (65537) must be <= (65536)
  (module (memory 0 65537))
          ^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:124:11: max pages (2147483648) must be <= (65536)
  (module (memory 0 2147483648))
          ^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:128:11: max pages (4294967295) must be <= (65536)
  (module (memory 0 4294967295))
          ^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:139:35: alignment must not be larger than natural alignment (8)
  (module (memory 0) (func (drop (i64.load align=16 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:143:35: alignment must not be larger than natural alignment (8)
  (module (memory 0) (func (drop (i64.load align=32 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:147:35: alignment must not be larger than natural alignment (4)
  (module (memory 0) (func (drop (i32.load align=8 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:151:35: alignment must not be larger than natural alignment (2)
  (module (memory 0) (func (drop (i32.load16_u align=4 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:155:35: alignment must not be larger than natural alignment (1)
  (module (memory 0) (func (drop (i32.load8_u align=2 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:159:29: alignment must not be larger than natural alignment (1)
  (module (memory 0) (func (i32.store8 align=2 (i32.const 0) (i32.const 0))))
                            ^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:163:29: alignment must not be larger than natural alignment (2)
  (module (memory 0) (func (i32.load16_u align=4 (i32.const 0))))
                            ^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:163:22: type stack at end of function is 1. expected 0
  (module (memory 0) (func (i32.load16_u align=4 (i32.const 0))))
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:167:29: alignment must not be larger than natural alignment (1)
  (module (memory 0) (func (i32.load8_u align=2 (i32.const 0))))
                            ^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:167:22: type stack at end of function is 1. expected 0
  (module (memory 0) (func (i32.load8_u align=2 (i32.const 0))))
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:171:29: alignment must not be larger than natural alignment (1)
  (module (memory 0) (func (i32.store8 align=2 (i32.const 0) (i32.const 0))))
                            ^^^^^^^^^^^^^^^^^^
third_party/testsuite/memory.wast:77: assert_unlinkable passed:
  error: data segment is out of bounds: [0, 1) >= max value 0
  error: @0x00000017: on_data_segment_data callback failed
third_party/testsuite/memory.wast:81: assert_unlinkable passed:
  error: data segment is out of bounds: [98304, 98305) >= max value 65536
  error: @0x0000001f: on_data_segment_data callback failed
third_party/testsuite/memory.wast:90: assert_unlinkable passed:
  error: data segment is out of bounds: [666, 667) >= max value 0
  error: @0x0000002c: on_data_segment_data callback failed
30/30 tests passed.
;;; STDOUT ;;)
